tests/ui/consts/const-eval/array-len-mismatch-type.stderr
error: the constant `5` is not of type `usize`
  --> $DIR/array-len-mismatch-type.rs:2:17
   |
LL | pub struct Data([[&'static str]; 5_i32]);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `i32`
   |
   = note: the length of array `[[&'static str]; 5]` must be type `usize`

error[E0277]: the size for values of type `[&'static str]` cannot be known at compilation time
  --> $DIR/array-len-mismatch-type.rs:2:17
   |
LL | pub struct Data([[&'static str]; 5_i32]);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[&'static str]`
   = note: slice and array elements must have `Sized` type

error[E0080]: the type `[[&str]; 5]` has an unknown layout
  --> $DIR/array-len-mismatch-type.rs:6:39
   |
LL | const _: &'static Data = unsafe { &*(&[] as *const Data) };
   |                                       ^^ evaluation of `_` failed here

error[E0308]: mismatched types
  --> $DIR/array-len-mismatch-type.rs:2:34
   |
LL | pub struct Data([[&'static str]; 5_i32]);
   |                                  ^^^^^ expected `usize`, found `i32`
   |
help: change the type of the numeric literal from `i32` to `usize`
   |
LL - pub struct Data([[&'static str]; 5_i32]);
LL + pub struct Data([[&'static str]; 5_usize]);
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0080, E0277, E0308.
For more information about an error, try `rustc --explain E0080`.
